--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,6 +27,9 @@
     <aside></aside>
     <section></section>
 </section>
+<section></section>
+<section></section>
+<footer></footer>
 </body>
 
  <!-- jQuery -->
